--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <style></style>
     <link href="CSS/style.css" rel="stylesheet">
+    <script></script>
 </head>
 <body>    
     <script language="JavaScript" src="JS/js.js"></script>
-    <table class="style.css">
-        <th>teste</th>
-    </table>
 </body>
 </html>
